buildscript {
    repositories {
        maven { url = "https://repo.repsy.io/mvn/jixxed/maven/" }
        mavenLocal()
        mavenCentral()
        gradlePluginPortal()
    }
    dependencies {
        classpath "org.beryx:badass-jlink-plugin:4.1.0"
        classpath 'org.jsonschema2pojo:jsonschema2pojo-gradle-plugin:1.3.3'
        classpath "net.rdrei.android.buildtimetracker:gradle-plugin:0.11.1"
        classpath "nl.jixxed.gradle:jsass-gradle-plugin:1.0.3"
    }
}

plugins {
    id 'java'
    id("nl.jixxed.gradle.jsass-java") version '1.0.3'
    id 'io.freefair.lombok' version '9.5.0'
    id 'idea' // optional (to generate IntelliJ IDEA project files)
    id 'application'
    id 'org.beryx.jlink' version '4.1.0'
    id 'org.gradlex.extra-java-module-info'
    id 'org.jsonschema2pojo'
    id 'net.rdrei.android.buildtimetracker' version '0.11.0'
    id('io.ebean') version "$version_ebean"
}

// Configure toolchain before apply from: to prevent plugins from locking it during dependency resolution
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
        vendor = JvmVendorSpec.AZUL
    }
}

// Apply externalized configurations (vars first since other scripts depend on it)
apply from: 'gradle/configs/vars.gradle'
apply from: 'gradle/configs/repositories.gradle'
apply from: 'gradle/configs/dependencies.gradle'
apply from: 'gradle/configs/code-gen.gradle'
apply from: 'gradle/configs/tasks.gradle'
apply from: 'gradle/configs/packaging.gradle'
apply from: 'gradle/configs/modules.gradle'
apply from: 'gradle/configs/compile.gradle'
apply from: 'gradle/configs/test.gradle'

// Top-level project configuration
group = 'nl.jixxed'

java {
    modularity.inferModulePath = true
}
jar {
    manifest {
        attributes 'Name': 'nl/jixxed/eliteodysseymaterials',
                'Implementation-Title': 'Elite Dangerous Odyssey Materials Helper',
                'Implementation-Version': project.version,
                'Codebase': ' *',
                'Permissions': ' all-permissions',
                'Application-Library-Allowable-Codebase': ' *',
                'Caller-Allowable-Codebase': ' *',
                'Trusted-Only': ' false',
                'Trusted-Library': ' false'
    }
}
application {
    mainModule = "nl.jixxed.eliteodysseymaterials"
    mainClass = "nl.jixxed.eliteodysseymaterials.Main"
    version = project.version
}

ebean {
    debugLevel = 0 //0 - 9
}

afterEvaluate {
    generateEffectiveLombokConfig.mustRunAfter generateJsonSchema2Pojo
}
